refactor : step2 피드백 반영 - StringAddCalculator 책임이 아닌 split 관련 메소드 private 처리 - @ParameterizedTest, @NullAndEmptySource로 인해 코드 중복 제거 - 불필요한 내용을 담고 있는 메소드명 변경 - 비용이 큰 정규식 패턴 생성 상수 처리